style: add 'text' color

--- a/styles/global.css
+++ b/styles/global.css
@@ -42,10 +42,12 @@
   --primary: #004aad;
   /* --body: #f4f7f5; */
   --body: #ffffff;
+  --text: #313131;
 }
 
 body {
   background-color: var(--body);
+  color: var(--text);
   font-family: "Montserrat Regular", Arial, Helvetica, sans-serif;
 }
 
