--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./navbar.css";
+@import "./sidebar.css";
+@import "./layout.css";
 
 @font-face {
   font-family: "Montserrat Regular";
@@ -51,16 +54,16 @@ body {
   font-family: "Montserrat Regular", Arial, Helvetica, sans-serif;
 }
 
-/* .wrapper {
+.wrapper {
   min-height: 100vh;
   position: relative;
   width: 100%;
-} */
+}
 
 /* Navbar */
-/* .navbar {
+.navbar {
   box-shadow: rgb(0 0 0 / 25%) 0px 0px 5px;
-} */
+}
 
 /* Footer */
 .footer {
@@ -81,404 +84,4 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-/* Base layout */
-.wrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-}
-
-#content {
-  display: flex;
-  min-height: 90vh;
-  transition: all 0.3s;
-  flex-direction: column;
-  width: calc(100vw - 270px);
-  margin-left: 250px;
-}
-.layout-Container {
-  min-height: 84vh;
-}
-
-div#content.active {
-  margin-left: 0;
-  width: 100%;
-}
-.line {
-  width: 100%;
-  height: 1px;
-  border-bottom: 1px solid #ddd;
-  margin: 40px 0;
-}
-.bg-flat-color-1 {
-  background: #00c292;
-}
-
-.bg-flat-color-2 {
-  background: #ab8ce4;
-}
-
-.bg-flat-color-3 {
-  background: #03a9f3;
-}
-
-.bg-flat-color-4 {
-  background: #fb9678;
-}
-
-.bg-flat-color-5 {
-  background: #66bb6a;
-}
-
-.bg-flat-color-6 {
-  background: #5c6bc0;
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
-.white-color {
-  color: #fff;
-}
-
-.flat-color-1 {
-  color: #00c292;
-}
-
-.flat-color-2 {
-  color: #ab8ce4;
-}
-
-.flat-color-3 {
-  color: #03a9f3;
-}
-
-.flat-color-4 {
-  color: #fb9678;
-}
-
-.flat-color-5 {
-  color: #66bb6a;
-}
-
-.flat-color-6 {
-  color: #5c6bc0;
-}
-
-.bg-twitter {
-  background: #1da1f2;
-}
-
-.bg-facebook {
-  background: #3b5998;
-}
-
-.bg-instagram {
-  background: #833ab4;
-}
-
-.bg- {
-  background: #ef5350;
-}
-
-.bg- {
-  background: #4dbd74;
-}
-
-.bg- {
-  background: #66bb6a;
-}
-
-.bg-white {
-  background-color: #fff;
-}
-
-.fade-5 {
-  opacity: 0.5;
-}
-
-.icon-lg {
-  font-size: 4.68em;
-}
-
-.fw-r {
-  font-weight: normal;
-}
-
-.color-gray {
-  color: #868e96;
-}
-
-.text-up {
-  text-transform: uppercase;
-}
-
-.br-0 {
-  border: none !important;
-}
-
-/* ---------------------------------------------------
-  MEDIAQUERIES
------------------------------------------------------ */
-@media (max-width: 768px) {
-  #content {
-    margin-left: 0px;
-    width: 100vw;
-  }
-}
-
-/* Sidebar */
-#sidebar {
-  min-width: 250px;
-  max-width: 250px;
-  color: #fff;
-  transition: all 0.3s;
-  height: 93vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  display: flex;
-}
-
-div#sticky-sidebar {
-  position: fixed;
-  top: auto;
-}
-
-.main-sidebar,
-.main-sidebar.open {
-  box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1),
-    0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
-    0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1),
-    0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
-}
-.main-sidebar {
-  top: 0;
-  position: fixed;
-  height: 100vh;
-  background: #fff;
-  z-index: 1070;
-  will-change: transform;
-  transition: -webkit-transform 0.2s ease-in-out;
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
-}
-
-#sidebar ul li a:hover {
-  box-shadow: inset 0.1875rem 0 0 #007bff;
-  background-color: #fbfbfb;
-  color: #007bff;
-}
-.border-right {
-  border-right: 1px solid #e1e5eb !important;
-}
-
-#sidebar.active {
-  margin-left: -250px;
-  transition: all 0.3s;
-}
-
-#sidebar .sidebar-header {
-  padding: 20px;
-  background: #6d7fcc;
-}
-
-#sidebar ul.components {
-  padding: 0px 0;
-  width: 100%;
-}
-
-#sidebar ul p {
-  color: #fff;
-  padding: 10px;
-}
-
-#sidebar ul li.active > a,
-a[aria-expanded="true"] {
-  box-shadow: inset 0.1875rem 0 0 #007bff;
-  background-color: #f4f5f7;
-  color: #007bff;
-}
-
-a[data-toggle="collapse"] {
-  position: relative;
-}
-
-.dropdown-toggle::after {
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-}
-
-ul ul a {
-  font-size: 0.9em !important;
-  padding-left: 30px !important;
-}
-
-ul.CTAs {
-  padding: 20px;
-}
-
-ul.CTAs a {
-  text-align: center;
-  font-size: 0.9em !important;
-  display: block;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-
-a.download {
-  background: #fff;
-  color: #7386d5;
-}
-
-a.article,
-a.article:hover {
-  background: #6d7fcc !important;
-  color: #fff !important;
-}
-
-.menu-icon {
-  display: inline;
-  margin-right: 10px;
-}
-
-a[data-toggle="collapse"] {
-  position: relative;
-}
-a,
-a:hover,
-a:focus {
-  color: white;
-  text-decoration: none;
-  transition: all 0.3s;
-}
-#sidebar ul li a {
-  padding: 10px;
-  font-size: 1.1em;
-  display: block;
-  text-decoration: none;
-  font-weight: 400;
-  color: #3d5170;
-
-  overflow: hidden;
-  text-overflow: ellipsis;
-  transition: box-shadow 0.2s ease, color 0.2s ease, background-color 0.2s ease;
-  font-size: 0.85rem;
-  will-change: background-color, box-shadow, color;
-  padding: 0.9375rem 1.5625rem;
-}
-ul.sub-menu.children.dropdown-menu.show {
-  background-color: #f5f5f5;
-}
-/* ---------------------------------------------------
-  MEDIAQUERIES
------------------------------------------------------ */
-@media (max-width: 768px) {
-  #sidebar {
-    margin-left: -250px;
-  }
-  #sidebar.active {
-    margin-left: 0;
-  }
-  #sidebarCollapse span {
-    display: none;
-  }
-}
-
-.navbar .navbar-nav li.menu-item-has-children a:before {
-  content: "";
-  position: absolute;
-  top: 23px;
-  right: 0;
-  width: 8px;
-  height: 8px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #607d8b #607d8b transparent transparent;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-}
-
-.navbar .navbar-nav li.menu-item-has-children.show .sub-menu {
-  max-height: 1000px;
-  opacity: 1;
-  position: static !important;
-}
-.navbar .navbar-nav li.menu-item-has-children .sub-menu {
-  background: #fff;
-  border: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  overflow-y: hidden;
-  padding: 0 0 0 35px;
-}
-@media (min-width: 576px) {
-  .navbar-expand-sm .navbar-nav .dropdown-menu {
-    position: absolute;
-  }
-}
-.navbar-nav .dropdown-menu {
-  position: static;
-  float: none;
-}
-.dropdown-menu.show {
-  display: block;
-}
-.dropdown-menu {
-  border-radius: 0;
-  -webkit-transform: none !important;
-  transform: none !important;
-}
-
-.dropdown-menu {
-  position: inherit !important;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  float: none;
-  z-index: 1000;
-  display: none;
-  font-size: 1rem;
-  color: #212529;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 0px solid rgba(0, 0, 0, 0.15) !important;
-  border-radius: 0.25rem;
-}
-
-/* Navbar */
-.navbar {
-  background: #fff;
-  box-shadow: 0 0.125rem 0.625rem rgba(90, 97, 105, 0.12);
-  border: none;
-  border-radius: 0;
-}
-
-.navbar-btn {
-  box-shadow: none;
-  outline: none !important;
-  border: none;
-}
-
-div#sticky {
-  position: sticky;
-  top: 0;
-  z-index: 99999;
-}
-.nav-title {
-  display: flex;
-  text-overflow: ellipsis;
-  flex-direction: row;
-  width: 220px;
-  font-weight: 600;
 }
