--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -24,3 +24,19 @@ div#sticky {
   width: 220px;
   font-weight: 600;
 }
+
+@media (min-width: 992px) {
+  .navbar-expand-lg {
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
+}
+
+.navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
